<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">爱悦</string>
    <string name="action_settings">设置</string>
    <string name="action_logout">退出</string>

    <string name="title_username">用户名</string>
    <string name="title_password">密码</string>
    <string name="title_confirm_pwd">确认密码</string>
    <string name="title_email">电子邮箱</string>
    <string name="title_fill_user_info">填写用户信息</string>
    <string name="title_add_friend">添加好友</string>
    <string name="title_view_friends">查看好友</string>
    <string name="title_new_tag">新增标签</string>
    <string name="title_phone_number">手机号</string>
    <string name="title_nickname">昵称</string>
    <string name="title_set_avatar">设置头像</string>
    <string name="title_not_login">未登录</string>
    <string name="title_no_loc_status">暂无状态</string>
    <string name="title_nick_name">昵称</string>
    <string name="title_introduce">个性签名</string>
    <string name="title_sex">性别</string>
    <string name="title_register_detail">注册成功，欢迎来到爱约！现在请完善您的个人资料</string>
    <string name="title_quick_settings_summary">我们需要获取您的地理位置信息，但一切都由你决定 :)</string>
    <string name="title_phone_confirm">我们已经向您的手机发送了验证号码，请将接收到的验证码输入到下方，如果没收到请重新发送</string>
    <string name="title_login_phone">手机登录</string>
    <string name="title_login_third">社交账号登录</string>
    <string name="title_register">立即注册</string>
    <string name="title_verify_code">验证码</string>
    <string name="title_quick_settings">快捷设置</string>
    <string name="title_verify_phone">验证手机号</string>
    <string name="title_activity_my_detail">我的</string>

    <string name="helper_username">用于登陆爱聊的账号</string>
    <string name="helper_phone">常用手机号，用于登陆账号以及密码找回</string>
    <string name="helper_password">8&#8211;16位密码</string>

    <string name="title_drawer_index">首页</string>
    <string name="title_drawer_places">会话</string>
    <string name="title_drawer_restaurant">好友</string>
    <string name="title_drawer_me">我的</string>

    <string name="title_activity_register">加入爱约</string>
    <string name="title_user_detail">个人资料</string>

    <string name="title_date_content">约会信息</string>

    <string name="btn_login">登录</string>
    <string name="btn_other_login">其他登录方式</string>
    <string name="btn_find_password">找回密码</string>
    <string name="btn_account_register">账号注册</string>
    <string name="btn_phone_register">手机号注册</string>
    <string name="btn_register">注册</string>
    <string name="btn_save">保存</string>
    <string name="btn_next">下一步</string>
    <string name="btn_weibo_login">微博登录</string>
    <string name="btn_qq_login">QQ登录</string>
    <string name="default_login">直接登录</string>
    <string name="find_pass">重置密码</string>
    <string name="btn_reset_pwd">确定</string>
    <string name="btn_resent_verify_code">重新发送</string>
    <string name="btn_get_verify_code">获取验证码</string>
    <string name="btn_send_date">立即发布</string>

    <string name="msg_loading">请稍候&#8230;</string>
    <string name="msg_loging_in">正在登录&#8230;</string>
    <string name="msg_registering">正在注册&#8230;</string>
    <string name="msg_please_input_account">请输入用户名/密码</string>
    <string name="msg_username_required">用户名不能为空</string>
    <string name="msg_username_cant_be_phone">用户名不能为手机号</string>
    <string name="msg_phone_required">手机号不能为空</string>
    <string name="msg_phone_invalid">请输入正确的手机号</string>
    <string name="msg_password_required">密码不能为空</string>
    <string name="msg_pwd_too_short">密码不得少于8位</string>
    <string name="msg_pwd_confirm_required">确认密码不能为空</string>
    <string name="msg_pwd_confirm_failed">两次密码输入不一致</string>
    <string name="msg_nickname_required">昵称不能为空</string>
    <string name="msg_verify_code_required">验证码不能为空</string>
    <string name="msg_sending">正在发送&#8230;</string>
    <string name="msg_invalid_uri">图片路径读取出错</string>
    <string name="msg_register_already_done">您已成功注册当前账号，如需修改密码请到设置中进行修改</string>
    <string name="msg_register_cancel_confirm">您已注册当前账号但还没有完成后续设置，是否设置？</string>
    <string name="msg_register_login_cancel_confirm">您已登录当前账号但还没有完成后续设置，是否继续？</string>
    <string name="msg_request_error">请求出错，请重试</string>

    <string name="pref_show_location_status_title">告诉好友你的位置状态</string>
    <string name="pref_show_location_status_summary">我们会根据您设置的位置与手机的状态来判断您当前的状态并显示给您的好友，以方便随时联系你</string>
    <string name="pref_show_status_to_all_title">向陌生人显示位置状态</string>
    <string name="pref_show_status_to_all_summary">任何人都将能看到您的位置状态</string>
    <string name="gps_now">当前位置</string>

    <!--chat start-->
    <string name="update_service_versionIsAlreadyNew">已经是最新版本了</string>
    <string name="update_service_sureToUpdate">确定更新版本吗</string>
    <string name="update_service_updateLog">更新日志</string>
    <string name="update_service_installNewVersion">安装新版本</string>
    <string name="update_service_laterNotify">稍后提醒</string>
    <string name="update_service_haveNewVersion">版本更新</string>

    <string name="setting_preference_voice">语音</string>

    <string name="update_service_failedToGetData">获取数据失败</string>
    <string name="entry_register_activity_password">密码</string>
    <string name="login">登录</string>
    <string name="profile_sex">性别</string>
    <string name="conversation_messages">会话</string>
    <string name="contact">联系人</string>
    <string name="profile_settings">Settings</string>
    <string name="profile_title">我</string>
    <string name="discover_title">发现</string>

    <string name="login_username_hint">请输入用户名</string>
    <string name="ensurePasswordHint">请在此输入密码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="ensurePassword">确认密码 </string>
    <string name="register">注册</string>

    <string name="password_can_not_null">密码不能为空</string>
    <string name="username_cannot_null">用户名不能为空</string>
    <string name="password_not_consistent">输入的两次密码不一致</string>
    <string name="registerSucceed">注册成功</string>
    <string name="registerFailed">注册失败。</string>

    <string name="not_have_account">还没有账号？</string>
    <string name="register_rightnow">立即注册 &gt;</string>
    <string name="discover_metres">米</string>
    <string name="discover_unknown">未知</string>
    <string name="discover_recent_login_time">最近登录时间:</string>
    <string name="contact_account">账号 </string>
    <string name="contact_search">搜索</string>
    <string name="profile_vibrate">震动</string>
    <string name="contact_chat">发起会话</string>
    <string name="contact_add_friend">添加好友</string>
    <string name="contact_new_friends">新朋友</string>
    <string name="contact_deleteFriendRequest">删除好友请求</string>
    <string name="contact_agreed">已同意</string>
    <string name="contact_deleteContact">删除联系人</string>
    <string name="common_sure">确定</string>
    <string name="contact_deleteSucceed">删除成功</string>
    <string name="contact_findFriends">查找好友</string>
    <string name="contact_add">添加</string>
    <string name="contact_sendRequestSucceed">发送请求成功，等待对方验证</string>
    <string name="contact_personalInfo">个人资料</string>
    <string name="contact_detailInfo">详细资料</string>
    <string name="contact_male">男</string>
    <string name="contact_female">女</string>
    <string name="profile_notifySetting">提醒设置</string>
    <string name="profile_notifyWhenNews">接收新消息通知</string>
    <string name="conversation_group">群组</string>
    <string name="conversation_name">群组名称</string>
    <string name="conversation_create">创建</string>
    <string name="conversation_Members">群组成员</string>
    <string name="conversation_inviteSucceed">已发出邀请</string>
    <string name="conversation_inviteMembers">邀请群成员</string>
    <string name="conversation_kickTips">确认要踢走该成员吗</string>
    <string name="conversation_detail_invite">邀请</string>
    <string name="conversation_quitGroup">退群</string>

    <string name="utils_kilometres">公里</string>
    <string name="refreshable_view_pull_to_refresh">下拉可以刷新</string>
    <string name="refreshable_view_release_to_refresh">释放立即刷新</string>
    <string name="refreshable_view_refreshing">正在刷新…</string>
    <string name="profile_fragment_checkUpdate">检查更新</string>
    <string name="discover_fragment_sort">排序</string>
    <string name="discover_fragment_loginTime">登录时间</string>
    <string name="discover_fragment_distance">距离</string>
    <string name="contact_alreadyCreateAddRequest">已经请求过了</string>
    <string name="conversation_alreadyQuitConv">已退出群</string>
    <string name="conversation_detail_kickSucceed">已踢走该成员</string>
    <string name="conversation_detail_title">详情</string>

    <string name="chat_location_activity_send">发送</string>
    <string name="chat_getGeoInfoFailed">获取地理位置信息失败!</string>
    <string name="chat_geoIsSame">获取坐标相同</string>
    <string name="chat_location_mapKeyErrorTips">key 验证出错! 请在 AndroidManifest.xml 文件中检查 key 设置</string>
    <string name="chat_reverseGeoCodeResultIs">反编码得到的地址：</string>
    <string name="chat_cannotGetYourAddressInfo">无法获取到您的位置信息！</string>

    <string name="chat_xlistview_footer_hint_normal">查看更多</string>
    <string name="chat_xlistview_footer_hint_ready">松开载入更多</string>
    <string name="placeNull">添加标签失败，请重试！</string>
    <string name="title_login">在线</string>
    <string name="add_tag">添加标签</string>
    <string name="tagTitle">请输入标签的标题</string>
    <string name="detial_introduce">请输入标签的内容</string>
    <string name="about_me">关于</string>
    <!-- chat end-->
</resources>
