<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/title_phone_confirm"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/phone_confirm_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/title_verify_code"
            android:inputType="number"
            android:maxLength="6"
            app:floatingLabel="normal"/>

        <Button
            android:id="@+id/phone_confirm_resent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/btn_resent_verify_code"/>
    </LinearLayout>
</LinearLayout>