<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/find_pass_arrow_back"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="center"
            android:src="@drawable/ic_arrow_back_grey600_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/find_pass_arrow_back"
            android:gravity="center"
            android:text="@string/find_pass"
            android:textSize="18sp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/find_pass_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:singleLine="true"
                app:floatingLabel="normal"
                app:floatingLabelAlwaysShown="true"
                app:floatingLabelText="@string/title_phone_number"
                app:primaryColor="@color/teal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/phone_confirm_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_verify_code"
                    android:imeOptions="actionGo"
                    android:inputType="number"
                    android:maxLength="6"
                    android:minWidth="68dp"
                    app:floatingLabel="normal"/>

                <Button
                    android:id="@+id/phone_confirm_resent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/btn_get_verify_code"/>
            </LinearLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/fist_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:singleLine="true"
                android:hint="请输入密码"
                app:floatingLabel="normal"
                app:floatingLabelAlwaysShown="true"
                app:floatingLabelText="@string/title_password"
                app:primaryColor="@color/teal"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/verify_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:singleLine="true"
                android:hint="再次输入密码"
                app:floatingLabel="normal"
                app:floatingLabelAlwaysShown="true"
                app:floatingLabelText="@string/title_password"
                app:primaryColor="@color/teal"/>

            <Button
                android:id="@+id/reset_pass_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/btn_teal"
                android:text="@string/btn_reset_pwd"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>