<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:text="@string/title_register_detail"/>

    <FrameLayout
        android:id="@+id/reg_detail_avatar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_transparent_dark"
        android:minHeight="56dp"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/title_set_avatar"
            android:textSize="16sp"/>

        <com.iyuelbs.external.RoundedImageView
            android:id="@+id/reg_detail_avatar_preview"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="right|center_vertical"
            android:src="@drawable/ic_default_avatar"/>
    </FrameLayout>

    <include layout="@layout/view_divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="56dp"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/title_nick_name"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/reg_detail_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:gravity="right"
            android:paddingLeft="16dp"
            android:singleLine="true"
            android:textSize="16sp"/>
    </LinearLayout>

    <include layout="@layout/view_divider"/>

    <RelativeLayout
        android:id="@+id/reg_detail_sex_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_transparent_dark"
        android:minHeight="56dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/title_sex"
            android:textSize="16sp"/>

        <Spinner
            android:id="@+id/reg_detail_sex_spinner"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp"
            android:dropDownWidth="56dp"
            android:spinnerMode="dropdown"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/reg_detail_sex_text"
            android:layout_width="36dp"
            android:layout_height="56dp"
            android:layout_alignRight="@id/reg_detail_sex_spinner"
            android:gravity="center"
            android:paddingRight="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"/>

    </RelativeLayout>

    <include layout="@layout/view_divider"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/reg_detail_signature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_introduce"
        android:minHeight="80dp"
        android:padding="16dp"
        android:textSize="16sp"
        app:floatingLabel="none"
        app:hideUnderline="true"
        app:maxCharacters="60"/>

</LinearLayout>